Added page hero's

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     </header>
 
     <main>
+      <section class="hero home-hero grid">
+        <img src="/images/home/home-hero.jpg" alt="A Sony camera placed in a field with brownish-yellow grass" class="home-hero__image" />
+        <div class="home-hero__content flow">
+          <h1>Dive into the pure <span class="block">essence of photography!</span></h1>
+          <p class="home-hero__body">Discover gear, guides, and captivating locations with Shutter Journey - your visual storytelling companion. Embark on your journey now!</p>
+          <a href="/pages/blog/" class="btn btn-light">Explore now</a>
+        </div>
+      </section>
+
       <section>
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
