--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -33,6 +33,13 @@
     </header>
 
     <main>
+      <section class="hero about-hero flex items-center">
+        <div class="container flow text-short text-center">
+          <h1 class="hero__title">About me</h1>
+          <p>Embark on a journey to discover the person behind the lens or find answers to common questions in the FAQ section.</p>
+        </div>
+      </section>
+
       <section>
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
