--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -33,6 +33,13 @@
     </header>
 
     <main>
+      <section class="hero contact-hero flex items-center">
+        <div class="container flow text-short text-center">
+          <h1 class="hero__title">Contact me</h1>
+          <p>Have a question, thought, or a visual story? Reach out through the form or connect on social media. Let's chat!</p>
+        </div>
+      </section>
+
       <section>
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
