Added Newsletter and started on the carousel

--- a/index.html
+++ b/index.html
@@ -42,6 +42,83 @@
         </div>
       </section>
 
+      <section class="container">
+        <div class="mb-2 border-bottom flex items-center justify-between">
+          <h2>Latest posts</h2>
+
+          <div class="flex gap-0-5">
+            <button class="prev-button btn btn-dark">
+              <i class="bx bx-chevron-left bx-md"></i>
+              <span class="sr-only">Prev slide</span>
+            </button>
+
+            <button class="next-button btn btn-dark">
+              <i class="bx bx-chevron-right bx-md"></i>
+              <span class="sr-only">Next slide</span>
+            </button>
+          </div>
+        </div>
+
+        <ul class="carousel mb-2 grid gap-1"></ul>
+
+        <ul class="pagination hidden justify-center gap-0-5">
+          <li>
+            <button class="pagination__btn active-pagination">
+              <span class="sr-only">Slide 1</span>
+            </button>
+          </li>
+
+          <li>
+            <button class="pagination__btn">
+              <span class="sr-only">Slide 2</span>
+            </button>
+          </li>
+
+          <li>
+            <button class="pagination__btn">
+              <span class="sr-only">Slide 3</span>
+            </button>
+          </li>
+
+          <li>
+            <button class="pagination__btn">
+              <span class="sr-only">Slide 4</span>
+            </button>
+          </li>
+
+          <li>
+            <button class="pagination__btn">
+              <span class="sr-only">Slide 5</span>
+            </button>
+          </li>
+
+          <li>
+            <button class="pagination__btn">
+              <span class="sr-only">Slide 6</span>
+            </button>
+          </li>
+        </ul>
+      </section>
+
+      <section class="newsletter container card flex flex-wrap">
+        <div class="flex justify-center">
+          <div class="flow fluid-padding text-short">
+            <h2>Elevate your photography journey with our newsletter</h2>
+            <p>Subscribe for exclusive photography tips, the latest updates, and more!</p>
+
+            <form>
+              <label for="email">Email <span class="required-field">*</span></label>
+              <input type="email" id="email" name="email" placeholder="email@example.com" required />
+
+              <input type="submit" value="Subscribe now" class="btn btn-dark" />
+              <p class="text-sm"><span class="required-field">*</span> Required field</p>
+            </form>
+          </div>
+        </div>
+
+        <div><img src="/images/home/newsletter.jpg" alt="Silhouette of a person standing on a rock during sunset" /></div>
+      </section>
+
       <section>
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
