--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -40,7 +40,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="instagram">
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
         <ul class="instagram-feed grid">
