Contact Page HTML Markup

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -40,7 +40,70 @@
         </div>
       </section>
 
-      <section>
+      <section class="reach-out grid container">
+        <div class="card flow fluid-padding">
+          <h2>Reach out</h2>
+          <p>Feel free to drop me a message below, and let's kick off a conversation - I'm looking forward to hearing from you!</p>
+
+          <form>
+            <label for="name">Name <span class="text-red">*</span></label>
+            <input type="text" id="name" name="name" placeholder="Name" required />
+
+            <label for="email">Email <span class="text-red">*</span></label>
+            <input type="email" id="email" name="email" placeholder="email@example.com" />
+
+            <label for="subject">Subject <span class="text-red">*</span></label>
+            <input type="text" id="subject" name="subject" placeholder="Subject" required />
+
+            <label for="message">Message <span class="text-red">*</span></label>
+            <textarea id="message" name="message" placeholder="Message" required></textarea>
+
+            <input type="submit" value="Send message" class="btn btn-dark" />
+            <p class="text-sm"><span class="text-red">*</span> Required fields</p>
+          </form>
+        </div>
+
+        <img src="/images/contact/reach-out.jpg" alt="Silhouette of a photographer raising a camera in hand against a sunset" class="card" />
+      </section>
+
+      <section class="card container fluid-padding flex flex-wrap items-center justify-between gap-2">
+        <div class="connect-with-me__content flow">
+          <h2>Connect with me</h2>
+          <p>Stay connected and immerse yourself in captivating visuals by joining our vibrant community on social media.</p>
+        </div>
+
+        <ul class="flex flex-wrap gap-1">
+          <li>
+            <a href="#" class="btn btn-dark">
+              <i class="bx bxl-facebook text-medium"></i>
+              <span>Facebook</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="btn btn-dark">
+              <i class="bx bxl-instagram text-medium"></i>
+              <span>Instagram</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="btn btn-dark">
+              <i class="bx bxl-twitter text-medium"></i>
+              <span>Twitter</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="btn btn-dark">
+              <i class="bx bxl-pinterest-alt text-medium"></i>
+              <span>Pinterest</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="instagram">
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
         <ul class="instagram-feed grid">
