Added about page HTML markup

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -40,6 +40,86 @@
         </div>
       </section>
 
+      <section class="container card flex flex-wrap">
+        <div><img src="/images/about/about-1.jpg" alt="Person crouched with a DSLR camera on the street, facing the camera" /></div>
+
+        <div class="flow fluid-padding">
+          <h2>Journey behind the lens</h2>
+          <p>Hey there! Welcome to Shutter Journey, your go-to photography blog for inspiration and a glimpse behind the scenes of the captivating world of photography.</p>
+          <p>I'm a passionate photographer and storyteller, continuously chasing compelling moments through my lens. Each photograph I take tells a story, blending emotions, light, and creativity. It's about capturing the essence of a single moment in time.</p>
+          <p class="mb-2">Curious to discover more about photography? Join me on this creative journey through captivating moments and visual stories.</p>
+
+          <div class="flex justify-between gap-0-5">
+            <div><img src="/images/about/about-2.jpg" alt="Grayscale of a person crouched with a Sony camera" class="rounded-corners" /></div>
+            <div><img src="/images/about/about-3.jpg" alt="Greyscale of a variety of camera lenses seen from above" class="rounded-corners" /></div>
+            <div><img src="/images/about/about-4.jpg" alt="Grayscale of a person holding a DSLR camera" class="rounded-corners" /></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="container card fluid-padding flex flex-wrap items-center gap-2">
+        <div class="faq__content flow">
+          <h2>Frequently asked questions</h2>
+          <p>Here, I've carefully compiled a list of common questions to make your photography journey a bit easier.</p>
+          <p>If you can't find what you're looking for, feel free to reach out via the contact page. Happy journey!</p>
+          <a href="/pages/contact/" class="btn btn-dark">Contact me</a>
+        </div>
+
+        <div class="faq__accordions">
+          <div class="faq__accordion-panel">
+            <h3 id="panel1-heading">
+              <button aria-expanded="false" aria-controls="panel1-content" class="faq__accordion-header flex items-center justify-between gap-1 rounded-corners text-medium">
+                <span>How often do you post new content?</span>
+                <i class="bx bx-chevron-right-circle"></i>
+              </button>
+            </h3>
+
+            <div id="panel1-content" aria-hidden="true" aria-labelledby="panel1-heading" class="faq__accordion-content grid">
+              <p class="overflow-hidden">I aim to share fresh content regularly, at least once a week. Stay tuned for exciting new photography insights!</p>
+            </div>
+          </div>
+
+          <div class="faq__accordion-panel">
+            <h3 id="panel2-heading">
+              <button aria-expanded="false" aria-controls="panel2-content" class="faq__accordion-header flex items-center justify-between gap-1 rounded-corners text-medium">
+                <span>Can I share your content on social media?</span>
+                <i class="bx bx-chevron-right-circle"></i>
+              </button>
+            </h3>
+
+            <div id="panel2-content" aria-hidden="true" aria-labelledby="panel2-heading" class="faq__accordion-content grid">
+              <p class="overflow-hidden">Yes, absolutely! Feel free to share my content and help it reach a wider audience. Thanks for spreading the word!</p>
+            </div>
+          </div>
+
+          <div class="faq__accordion-panel">
+            <h3 id="panel3-heading">
+              <button aria-expanded="false" aria-controls="panel3-content" class="faq__accordion-header flex items-center justify-between gap-1 rounded-corners text-medium">
+                <span>Do you offer photography coaching?</span>
+                <i class="bx bx-chevron-right-circle"></i>
+              </button>
+            </h3>
+
+            <div id="panel3-content" aria-hidden="true" aria-labelledby="panel3-heading" class="faq__accordion-content grid">
+              <p class="overflow-hidden">Yes, I offer photography coaching! Feel free to reach out via the contact page for more details.</p>
+            </div>
+          </div>
+
+          <div class="faq__accordion-panel">
+            <h3 id="panel4-heading">
+              <button aria-expanded="false" aria-controls="panel4-content" class="faq__accordion-header flex items-center justify-between gap-0-5 rounded-corners text-medium">
+                <span>Are you open for collaborations?</span>
+                <i class="bx bx-chevron-right-circle"></i>
+              </button>
+            </h3>
+
+            <div id="panel4-content" aria-hidden="true" aria-labelledby="panel4-heading" class="faq__accordion-content grid">
+              <p class="overflow-hidden">Yes, I'm always open to exciting collaborations! If you have ideas or proposals, hit me up through the contact page!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="instagram">
         <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
 
