Minor renaming for consistency

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -41,7 +41,7 @@
       </section>
 
       <section class="container card flex flex-wrap">
-        <div><img src="/images/about/about-1.jpg" alt="Person crouched with a DSLR camera on the street, facing the camera" /></div>
+        <div><img src="/images/about/journey-behind-1.jpg" alt="Person crouched with a DSLR camera on the street, facing the camera" /></div>
 
         <div class="flow fluid-padding">
           <h2>Journey behind the lens</h2>
@@ -50,9 +50,9 @@
           <p class="mb-2">Curious to discover more about photography? Join me on this creative journey through captivating moments and visual stories.</p>
 
           <div class="flex justify-between gap-0-5">
-            <div><img src="/images/about/about-2.jpg" alt="Grayscale of a person crouched with a Sony camera" class="rounded-corners" /></div>
-            <div><img src="/images/about/about-3.jpg" alt="Greyscale of a variety of camera lenses seen from above" class="rounded-corners" /></div>
-            <div><img src="/images/about/about-4.jpg" alt="Grayscale of a person holding a DSLR camera" class="rounded-corners" /></div>
+            <div><img src="/images/about/journey-behind-2.jpg" alt="Grayscale of a person crouched with a Sony camera" class="rounded-corners" /></div>
+            <div><img src="/images/about/journey-behind-3.jpg" alt="Greyscale of a variety of camera lenses seen from above" class="rounded-corners" /></div>
+            <div><img src="/images/about/journey-behind-4.jpg" alt="Grayscale of a person holding a DSLR camera" class="rounded-corners" /></div>
           </div>
         </div>
       </section>
