--- a/index.html
+++ b/index.html
@@ -59,45 +59,45 @@
           </div>
         </div>
 
-        <ul class="carousel relative mb-2 grid gap-1">
+        <ul class="carousel relative min-h-200 mb-2 grid gap-1">
           <li>
-            <div class="loading-spinner absolute"></div>
+            <div class="loading-spinner absolute rounded-full"></div>
           </li>
         </ul>
 
         <ul class="pagination hidden justify-center gap-0-5">
           <li>
-            <button class="pagination__btn active-pagination">
+            <button class="pagination__btn rounded-full active-pagination">
               <span class="sr-only">Slide 1</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn">
+            <button class="pagination__btn rounded-full">
               <span class="sr-only">Slide 2</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn">
+            <button class="pagination__btn rounded-full">
               <span class="sr-only">Slide 3</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn">
+            <button class="pagination__btn rounded-full">
               <span class="sr-only">Slide 4</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn">
+            <button class="pagination__btn rounded-full">
               <span class="sr-only">Slide 5</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn">
+            <button class="pagination__btn rounded-full">
               <span class="sr-only">Slide 6</span>
             </button>
           </li>
