Added featured post section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
         </ul>
       </section>
 
+      <section class="featured-post">
+        <div class="container">
+          <h2 class="mb-2 border-bottom">Featured post</h2>
+
+          <div class="featured-post__container relative min-h-200 grid place-items-center gap-2">
+            <div class="loading-spinner rounded-full"></div>
+          </div>
+        </div>
+      </section>
+
       <section class="newsletter container card flex flex-wrap">
         <div class="flex justify-center">
           <div class="flow fluid-padding text-short">
