Fixed small typo

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -113,7 +113,7 @@
 
           <li class="accordion__panel">
             <h3 id="panel4-heading">
-              <button aria-expanded="false" aria-controls="panel4-content" class="accordion__header flex items-center justify-between gap-0-5 rounded-corners text-medium">
+              <button aria-expanded="false" aria-controls="panel4-content" class="accordion__header flex items-center justify-between gap-1 rounded-corners text-medium">
                 <span>Are you open for collaborations?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
