--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -45,18 +45,34 @@
           <h2>Reach out</h2>
           <p>Feel free to drop me a message below, and let's kick off a conversation - I'm looking forward to hearing from you!</p>
 
-          <form>
+          <form name="contact">
             <label for="name">Name <span class="text-red">*</span></label>
-            <input type="text" id="name" name="name" placeholder="Name" required />
+            <div class="relative">
+              <input type="text" id="name" name="name" placeholder="Name" aria-describedby="name-error" />
+              <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
+              <p id="name-error" role="alert" class="input__error-message text-sm text-red hidden">Name must be at least 5 characters</p>
+            </div>
 
             <label for="email">Email <span class="text-red">*</span></label>
-            <input type="email" id="email" name="email" placeholder="email@example.com" />
+            <div class="relative">
+              <input type="email" id="email" name="email" placeholder="email@example.com" aria-describedby="email-error" />
+              <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
+              <p id="email-error" role="alert" class="input__error-message text-sm text-red hidden">Please enter a valid email address</p>
+            </div>
 
             <label for="subject">Subject <span class="text-red">*</span></label>
-            <input type="text" id="subject" name="subject" placeholder="Subject" required />
+            <div class="relative">
+              <input type="text" id="subject" name="subject" placeholder="Subject" aria-describedby="subject-error" />
+              <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
+              <p id="subject-error" role="alert" class="input__error-message text-sm text-red hidden">Subject must be at least 15 characters</p>
+            </div>
 
             <label for="message">Message <span class="text-red">*</span></label>
-            <textarea id="message" name="message" placeholder="Message" required></textarea>
+            <div class="relative">
+              <textarea id="message" name="message" placeholder="Message" aria-describedby="message-error"></textarea>
+              <i class="bx bxs-error-circle bx-sm input__error-icon absolute text-red hidden"></i>
+              <p id="message-error" role="alert" class="input__error-message text-sm text-red hidden">Message must be at least 25 characters</p>
+            </div>
 
             <input type="submit" value="Send message" class="btn btn-dark" />
             <p class="text-sm"><span class="text-red">*</span> Required fields</p>
