Minor styling and naming adjustments

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a href="/"><img src="/images/shared/logo.png" alt="Shutter Journey logo" class="logo" /></a>
         <nav class="header__nav">
           <ul class="flex flex-auto-dir items-center gap-2">
-            <li><a href="/" class="hover-orange current" aria-current="page">Home</a></li>
-            <li><a href="/pages/blog/" class="hover-orange">Blog</a></li>
-            <li><a href="/pages/about/" class="hover-orange">About</a></li>
-            <li><a href="/pages/contact/" class="hover-orange">Contact</a></li>
+            <li><a href="/" class="link-hover current" aria-current="page">Home</a></li>
+            <li><a href="/pages/blog/" class="link-hover">Blog</a></li>
+            <li><a href="/pages/about/" class="link-hover">About</a></li>
+            <li><a href="/pages/contact/" class="link-hover">Contact</a></li>
           </ul>
         </nav>
         <button class="btn-burger btn" aria-expanded="false">
@@ -134,7 +134,7 @@
       </section>
 
       <section class="instagram">
-        <h2 class="container mb-2 text-center">Follow <a href="#">@shutterjourney</a> on Instagram!</h2>
+        <h2 class="container mb-2 text-center">Follow <a href="#" class="underline">@shutterjourney</a> on Instagram!</h2>
 
         <ul class="instagram-feed grid">
           <li class="overflow-hidden">
@@ -202,37 +202,37 @@
 
         <nav class="footer__nav">
           <ul class="flex flex-auto-dir items-center gap-1-5">
-            <li><a href="/" class="hover-orange">Home</a></li>
-            <li><a href="/pages/blog/" class="hover-orange">Blog</a></li>
-            <li><a href="/pages/about/" class="hover-orange">About</a></li>
-            <li><a href="/pages/contact/" class="hover-orange">Contact</a></li>
+            <li><a href="/" class="link-hover">Home</a></li>
+            <li><a href="/pages/blog/" class="link-hover">Blog</a></li>
+            <li><a href="/pages/about/" class="link-hover">About</a></li>
+            <li><a href="/pages/contact/" class="link-hover">Contact</a></li>
           </ul>
         </nav>
 
         <ul class="footer__icons flex items-center gap-1-5">
           <li>
-            <a href="#" class="hover-orange">
+            <a href="#" class="link-hover">
               <i class="bx bxl-facebook-square"></i>
               <span class="sr-only">Facebook</span>
             </a>
           </li>
 
           <li>
-            <a href="#" class="hover-orange">
+            <a href="#" class="link-hover">
               <i class="bx bxl-instagram"></i>
               <span class="sr-only">Instagram</span>
             </a>
           </li>
 
           <li>
-            <a href="#" class="hover-orange">
+            <a href="#" class="link-hover">
               <i class="bx bxl-twitter"></i>
               <span class="sr-only">Twitter</span>
             </a>
           </li>
 
           <li>
-            <a href="#" class="hover-orange">
+            <a href="#" class="link-hover">
               <i class="bx bxl-pinterest"></i>
               <span class="sr-only">Pinterest</span>
             </a>
