Added success message

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <input type="submit" value="Send message" class="btn btn-dark" />
-            <p class="text-sm"><span class="text-red">*</span> Required fields</p>
+            <p class="status-label text-sm"><span class="text-red">*</span> Required fields</p>
           </form>
         </div>
 
