Small adjustments to alert message & loader

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container">
           <h2 class="mb-2 border-bottom">Featured post</h2>
 
-          <div class="featured-post__container relative min-h-200 grid place-items-center gap-2">
+          <div class="featured-post__container min-h-200 grid place-items-center gap-2">
             <div class="loading-spinner rounded-full"></div>
           </div>
         </div>
