Added an utility class

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -68,7 +68,7 @@
         <ul class="faq__accordions grid gap-1">
           <li class="accordion__panel">
             <h3 id="panel1-heading">
-              <button aria-expanded="false" aria-controls="panel1-content" class="accordion__header flex items-center justify-between gap-1 rounded-corners text-medium">
+              <button aria-expanded="false" aria-controls="panel1-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>How often do you post new content?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -83,7 +83,7 @@
 
           <li class="accordion__panel">
             <h3 id="panel2-heading">
-              <button aria-expanded="false" aria-controls="panel2-content" class="accordion__header flex items-center justify-between gap-1 rounded-corners text-medium">
+              <button aria-expanded="false" aria-controls="panel2-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Can I share your content on social media?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -98,7 +98,7 @@
 
           <li class="accordion__panel">
             <h3 id="panel3-heading">
-              <button aria-expanded="false" aria-controls="panel3-content" class="accordion__header flex items-center justify-between gap-1 rounded-corners text-medium">
+              <button aria-expanded="false" aria-controls="panel3-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Do you offer photography coaching?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
@@ -113,7 +113,7 @@
 
           <li class="accordion__panel">
             <h3 id="panel4-heading">
-              <button aria-expanded="false" aria-controls="panel4-content" class="accordion__header flex items-center justify-between gap-1 rounded-corners text-medium">
+              <button aria-expanded="false" aria-controls="panel4-content" class="accordion__header flex items-center justify-between gap-1 text-medium cursor-pointer rounded-corners">
                 <span>Are you open for collaborations?</span>
                 <i class="bx bx-plus-circle"></i>
               </button>
