--- a/index.html
+++ b/index.html
@@ -67,37 +67,37 @@
 
         <ul class="pagination hidden justify-center gap-0-5">
           <li>
-            <button class="pagination__btn rounded-full active-pagination">
+            <button class="pagination__btn cursor-pointer rounded-full active-pagination">
               <span class="sr-only">Slide 1</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn rounded-full">
+            <button class="pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 2</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn rounded-full">
+            <button class="pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 3</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn rounded-full">
+            <button class="pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 4</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn rounded-full">
+            <button class="pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 5</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn rounded-full">
+            <button class="pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 6</span>
             </button>
           </li>
