Improved BEM and naming of the carousel

--- a/index.html
+++ b/index.html
@@ -63,57 +63,57 @@
           <h2>Latest posts</h2>
 
           <div class="flex gap-0-5">
-            <button class="prev-button btn btn-dark">
+            <button class="carousel__btn-prev btn btn-dark">
               <i class="bx bx-chevron-left bx-md"></i>
               <span class="sr-only">Prev slide</span>
             </button>
 
-            <button class="next-button btn btn-dark">
+            <button class="carousel__btn-next btn btn-dark">
               <i class="bx bx-chevron-right bx-md"></i>
               <span class="sr-only">Next slide</span>
             </button>
           </div>
         </div>
 
-        <ul class="carousel relative min-h-200 mb-2 grid gap-1">
+        <ul class="carousel__track relative min-h-200 mb-2 grid gap-1">
           <li>
             <div class="loading-spinner absolute rounded-full"></div>
           </li>
         </ul>
 
-        <ul class="pagination hidden justify-center gap-0-5">
+        <ul class="carousel__pagination hidden justify-center gap-0-5">
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full active-pagination">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full pagination-current">
               <span class="sr-only">Slide 1</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 2</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 3</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 4</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 5</span>
             </button>
           </li>
 
           <li>
-            <button class="pagination__btn cursor-pointer rounded-full">
+            <button class="carousel__pagination__btn cursor-pointer rounded-full">
               <span class="sr-only">Slide 6</span>
             </button>
           </li>
